# hswblog2021

./: README.md
api/: Cargo.toml  Rocket.toml  config.yaml  db.json  destructure.js  exercise.js  index.js  package-lock.json  package.json  promises.js  promises2.js  utils.js
api/middlewares/: 001_session.js
api/routes/: blogposts.js  session.js
api/services/: blogpost.js  session.js  utils.js
api/src/: config.rs  main.rs
api/src/models/: user.rs
api/src/services/: blog.rs  mod.rs  user.rs
web/: .prettierrc  index.tpl.html  package-lock.json  package.json  webpack.config.js
web/src/: HSWBlog.svelte  mount.js
web/src/admin/: Admin.svelte  ArticleEditor.svelte  ArticleLink.svelte  ArticleList.svelte
web/src/admin/repositories/: article.js
web/src/public/: Article.svelte  ArticleLink.svelte  ArticleList.svelte  Login.svelte  Public.svelte
web/src/public/repositories/: article.js
web/src/shared/: LazyRoute.svelte  Title.svelte  VisualEditor.svelte  http-client.js  router.js
web/src/shared/repositories/: session.js
